# climbing-analysis

./: .env  .gitignore  README.md  dj_config.py  environment.yml  environment_ci.yml  environment_cuda.yml  environment_redux.yml  pyproject.toml
.github/workflows/: session_class_test.yml
aws/: README.md  ec2_setup.sh  requirements.txt
climbing_analysis/: decorators.py  io.py  schema.py  utils.py
climbing_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
climbing_analysis/data/: processed.py  session.py  session_data.py
climbing_analysis/distributed/: client.py  local_cluster.py
climbing_analysis/ephys/: README.md  events.py  io.py  lfp.py  spike_analysis.py  spike_sorting.py  utils.py
climbing_analysis/models/: glm.py  utils.py
climbing_analysis/multi_modal/: alignment.py  utils.py
climbing_analysis/pose/: coordination.py  io.py  movement_events.py  summary.py  utils.py
climbing_analysis/state_space_analysis/: utils.py
configs/: README.md
docs/: data.md  development.md  lfp.md  multi_modal.md  pose.md  spikes.md
examples/: run_load_existing_session.py  run_pose_example.py  run_session_pipeline.py
neurokinematics/: decorators.py  io.py  schema.py  utils.py
notebooks/: README.md  event_alignment_demo.ipynb  identify_movements_demo.ipynb  in_colab.ipynb  phase_offset_demo.ipynb  spike_sorting_demo.ipynb
tests/: conftest.py  test_climbing_session.py  test_video_alignment.py
waveforms/: recording.json  settings.json  sorting_provenance.json  sparsity_mask.npy  spikeinterface_info.json
workflows/: process_session.py
(+88 files in other folders)
