[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neurokinematics"
version = "0.1.0"
description = "Pipeline for analysing extracellular electrophysiology with freely-moving behaviour"
authors = [
    {name = "Christopher Black"}
]

readme = "README.md"
requires-python = ">3.11"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "h5py",
    "pyyaml"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neurokinematics*"]